# RenderingPlayground

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Resources/Models/: plane.off  sandglass.off
Resources/Shaders/: DebugFragmentShader.glsl  DebugVertexShader.glsl  DisplayFragmentShader.glsl  DisplayVertexShader.glsl  PBRFragmentShader.glsl  PBRVertexShader.glsl  PathtracingFragmentShader.glsl  RaytracingFragmentShader.glsl  RaytracingVertexShader.glsl
Sources/: BRDF.cpp  BRDF.h  Camera.cpp  Camera.h  ColorCorrection.cpp  ColorCorrection.h  Error.cpp  Error.h  IO.cpp  IO.h  Image.h  Light.cpp  Light.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Resources.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Transform.h
Sources/acceleration/: BVH.cpp  BVH.h
Sources/editor/: DebugEditor.h  Editor.h  LightsEditor.h  RenderingEditor.h  SceneEditor.h  UIManager.h
Sources/primitives/: AABB.h  Intersections.cpp  Intersections.h  Ray.h
Sources/renderers/: GPURaytracer.cpp  GPURaytracer.h  Rasterizer.cpp  Rasterizer.h  RayTracer.cpp  RayTracer.h
dep/: CMakeLists.txt
dep/obj_loader/: OBJ_Loader.h
include/acceleration/: BVH.h
include/core/: BRDF.h  Camera.h  ColorCorrection.h  Error.h  IO.h  Image.h  Light.h  Material.h  Mesh.h  Model.h  Scene.h
include/editor/: DebugEditor.h  Editor.h  LightsEditor.h  RenderingEditor.h  SceneEditor.h  UIManager.h
include/primitives/: AABB.h  Intersections.h  SSBO.h  Triangle.h
include/renderers/: GPUPathtracer.h  GPURaytracer.h  Rasterizer.h  RayTracer.h
include/utils/: Transform.h
python/: curves.py
src/acceleration/: BVH.cpp
src/core/: BRDF.cpp  Camera.cpp  ColorCorrection.cpp  Error.cpp  IO.cpp  Light.cpp  Main.cpp  Material.cpp  Mesh.cpp  Model.cpp  Scene.cpp  ShaderProgram.cpp  Texture.cpp
src/primitives/: SSBO.cpp  (+1 more)
(+5 files in other folders)
